pr3/mycc.output
Terminals which are not used

   PA
   NA
   TA
   DA
   MA
   AA
   XA
   OA
   LA
   RA
   LS
   RS
   AR


State 33 conflicts: 16 shift/reduce
State 52 conflicts: 16 shift/reduce
State 60 conflicts: 16 shift/reduce
State 61 conflicts: 16 shift/reduce
State 62 conflicts: 16 shift/reduce
State 63 conflicts: 16 shift/reduce
State 64 conflicts: 16 shift/reduce
State 65 conflicts: 16 shift/reduce
State 68 conflicts: 16 shift/reduce
State 69 conflicts: 16 shift/reduce
State 70 conflicts: 16 shift/reduce
State 71 conflicts: 16 shift/reduce
State 72 conflicts: 16 shift/reduce
State 73 conflicts: 16 shift/reduce
State 74 conflicts: 16 shift/reduce
State 75 conflicts: 16 shift/reduce
State 86 conflicts: 1 reduce/reduce


Grammar

    0 $accept: stmts $end

    1 stmts: stmts stmt
    2      | /* empty */

    3 stmt: ';'
    4     | expr ';'
    5     | IF '(' expr ')' M stmt
    6     | IF '(' expr ')' M stmt N ELSE L stmt L
    7     | WHILE '(' L expr ')' M stmt N
    8     | DO L stmt WHILE '(' expr ')' M N ';'
    9     | FOR '(' expr ';' expr M ';' expr ')' stmt
   10     | RETURN expr ';'
   11     | BREAK ';'
   12     | '{' stmts '}'
   13     | error ';'

   14 expr: ID '=' expr
   15     | expr OR expr
   16     | expr AN expr
   17     | expr '^' expr
   18     | expr EQ expr
   19     | expr NE expr
   20     | expr '<' expr
   21     | expr '>' expr
   22     | expr LE expr
   23     | expr GE expr
   24     | expr '+' expr
   25     | expr PP ';'
   26     | expr NN ';'
   27     | expr '-' expr
   28     | expr '*' expr
   29     | expr '/' expr
   30     | expr '%' expr
   31     | '!' expr
   32     | '(' expr ')'
   33     | '$' INT8
   34     | ID
   35     | INT8
   36     | INT16
   37     | INT32
   38     | FLT
   39     | STR

   40 L: /* empty */

   41 M: /* empty */

   42 N: /* empty */


Terminals, with rules where they appear

$end (0) 0
'!' (33) 31
'$' (36) 33
'%' (37) 30
'(' (40) 5 6 7 8 9 32
')' (41) 5 6 7 8 9 32
'*' (42) 28
'+' (43) 24
'-' (45) 27
'/' (47) 29
';' (59) 3 4 8 9 10 11 13 25 26
'<' (60) 20
'=' (61) 14
'>' (62) 21
'^' (94) 17
'{' (123) 12
'}' (125) 12
error (256) 13
ID (258) 14 34
INT8 (259) 33 35
INT16 (260) 36
INT32 (261) 37
FLT (262) 38
STR (263) 39
BREAK (264) 11
DO (265) 8
ELSE (266) 6
FOR (267) 9
IF (268) 5 6
RETURN (269) 10
WHILE (270) 7 8
PA (271)
NA (272)
TA (273)
DA (274)
MA (275)
AA (276)
XA (277)
OA (278)
LA (279)
RA (280)
OR (281) 15
AN (282) 16
EQ (283) 18
NE (284) 19
LE (285) 22
GE (286) 23
LS (287)
RS (288)
AR (289)
PP (290) 25
NN (291) 26


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
stmts (54)
    on left: 1 2, on right: 0 1 12
stmt (55)
    on left: 3 4 5 6 7 8 9 10 11 12 13, on right: 1 5 6 7 8 9
expr (56)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32 33 34 35 36 37 38 39, on right: 4 5 6 7 8 9 10 14 15 16 17 18
    19 20 21 22 23 24 25 26 27 28 29 30 31 32
L (57)
    on left: 40, on right: 6 7 8
M (58)
    on left: 41, on right: 5 6 7 8 9
N (59)
    on left: 42, on right: 6 7 8


state 0

    0 $accept: . stmts $end

    $default  reduce using rule 2 (stmts)

    stmts  go to state 1


state 1

    0 $accept: stmts . $end
    1 stmts: stmts . stmt

    $end    shift, and go to state 2
    error   shift, and go to state 3
    ID      shift, and go to state 4
    INT8    shift, and go to state 5
    INT16   shift, and go to state 6
    INT32   shift, and go to state 7
    FLT     shift, and go to state 8
    STR     shift, and go to state 9
    BREAK   shift, and go to state 10
    DO      shift, and go to state 11
    FOR     shift, and go to state 12
    IF      shift, and go to state 13
    RETURN  shift, and go to state 14
    WHILE   shift, and go to state 15
    ';'     shift, and go to state 16
    '('     shift, and go to state 17
    '{'     shift, and go to state 18
    '!'     shift, and go to state 19
    '$'     shift, and go to state 20

    stmt  go to state 21
    expr  go to state 22


state 2

    0 $accept: stmts $end .

    $default  accept


state 3

   13 stmt: error . ';'

    ';'  shift, and go to state 23


state 4

   14 expr: ID . '=' expr
   34     | ID .

    '='  shift, and go to state 24

    $default  reduce using rule 34 (expr)


state 5

   35 expr: INT8 .

    $default  reduce using rule 35 (expr)


state 6

   36 expr: INT16 .

    $default  reduce using rule 36 (expr)


state 7

   37 expr: INT32 .

    $default  reduce using rule 37 (expr)


state 8

   38 expr: FLT .

    $default  reduce using rule 38 (expr)


state 9

   39 expr: STR .

    $default  reduce using rule 39 (expr)


state 10

   11 stmt: BREAK . ';'

    ';'  shift, and go to state 25


state 11

    8 stmt: DO . L stmt WHILE '(' expr ')' M N ';'

    $default  reduce using rule 40 (L)

    L  go to state 26


state 12

    9 stmt: FOR . '(' expr ';' expr M ';' expr ')' stmt

    '('  shift, and go to state 27


state 13

    5 stmt: IF . '(' expr ')' M stmt
    6     | IF . '(' expr ')' M stmt N ELSE L stmt L

    '('  shift, and go to state 28


state 14

   10 stmt: RETURN . expr ';'

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 29


state 15

    7 stmt: WHILE . '(' L expr ')' M stmt N

    '('  shift, and go to state 30


state 16

    3 stmt: ';' .

    $default  reduce using rule 3 (stmt)


state 17

   32 expr: '(' . expr ')'

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 31


state 18

   12 stmt: '{' . stmts '}'

    $default  reduce using rule 2 (stmts)

    stmts  go to state 32


state 19

   31 expr: '!' . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 33


state 20

   33 expr: '$' . INT8

    INT8  shift, and go to state 34


state 21

    1 stmts: stmts stmt .

    $default  reduce using rule 1 (stmts)


state 22

    4 stmt: expr . ';'
   15 expr: expr . OR expr
   16     | expr . AN expr
   17     | expr . '^' expr
   18     | expr . EQ expr
   19     | expr . NE expr
   20     | expr . '<' expr
   21     | expr . '>' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . '+' expr
   25     | expr . PP ';'
   26     | expr . NN ';'
   27     | expr . '-' expr
   28     | expr . '*' expr
   29     | expr . '/' expr
   30     | expr . '%' expr

    OR   shift, and go to state 35
    AN   shift, and go to state 36
    EQ   shift, and go to state 37
    NE   shift, and go to state 38
    LE   shift, and go to state 39
    GE   shift, and go to state 40
    PP   shift, and go to state 41
    NN   shift, and go to state 42
    ';'  shift, and go to state 43
    '^'  shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51


state 23

   13 stmt: error ';' .

    $default  reduce using rule 13 (stmt)


state 24

   14 expr: ID '=' . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 52


state 25

   11 stmt: BREAK ';' .

    $default  reduce using rule 11 (stmt)


state 26

    8 stmt: DO L . stmt WHILE '(' expr ')' M N ';'

    error   shift, and go to state 3
    ID      shift, and go to state 4
    INT8    shift, and go to state 5
    INT16   shift, and go to state 6
    INT32   shift, and go to state 7
    FLT     shift, and go to state 8
    STR     shift, and go to state 9
    BREAK   shift, and go to state 10
    DO      shift, and go to state 11
    FOR     shift, and go to state 12
    IF      shift, and go to state 13
    RETURN  shift, and go to state 14
    WHILE   shift, and go to state 15
    ';'     shift, and go to state 16
    '('     shift, and go to state 17
    '{'     shift, and go to state 18
    '!'     shift, and go to state 19
    '$'     shift, and go to state 20

    stmt  go to state 53
    expr  go to state 22


state 27

    9 stmt: FOR '(' . expr ';' expr M ';' expr ')' stmt

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 54


state 28

    5 stmt: IF '(' . expr ')' M stmt
    6     | IF '(' . expr ')' M stmt N ELSE L stmt L

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 55


state 29

   10 stmt: RETURN expr . ';'
   15 expr: expr . OR expr
   16     | expr . AN expr
   17     | expr . '^' expr
   18     | expr . EQ expr
   19     | expr . NE expr
   20     | expr . '<' expr
   21     | expr . '>' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . '+' expr
   25     | expr . PP ';'
   26     | expr . NN ';'
   27     | expr . '-' expr
   28     | expr . '*' expr
   29     | expr . '/' expr
   30     | expr . '%' expr

    OR   shift, and go to state 35
    AN   shift, and go to state 36
    EQ   shift, and go to state 37
    NE   shift, and go to state 38
    LE   shift, and go to state 39
    GE   shift, and go to state 40
    PP   shift, and go to state 41
    NN   shift, and go to state 42
    ';'  shift, and go to state 56
    '^'  shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51


state 30

    7 stmt: WHILE '(' . L expr ')' M stmt N

    $default  reduce using rule 40 (L)

    L  go to state 57


state 31

   15 expr: expr . OR expr
   16     | expr . AN expr
   17     | expr . '^' expr
   18     | expr . EQ expr
   19     | expr . NE expr
   20     | expr . '<' expr
   21     | expr . '>' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . '+' expr
   25     | expr . PP ';'
   26     | expr . NN ';'
   27     | expr . '-' expr
   28     | expr . '*' expr
   29     | expr . '/' expr
   30     | expr . '%' expr
   32     | '(' expr . ')'

    OR   shift, and go to state 35
    AN   shift, and go to state 36
    EQ   shift, and go to state 37
    NE   shift, and go to state 38
    LE   shift, and go to state 39
    GE   shift, and go to state 40
    PP   shift, and go to state 41
    NN   shift, and go to state 42
    ')'  shift, and go to state 58
    '^'  shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51


state 32

    1 stmts: stmts . stmt
   12 stmt: '{' stmts . '}'

    error   shift, and go to state 3
    ID      shift, and go to state 4
    INT8    shift, and go to state 5
    INT16   shift, and go to state 6
    INT32   shift, and go to state 7
    FLT     shift, and go to state 8
    STR     shift, and go to state 9
    BREAK   shift, and go to state 10
    DO      shift, and go to state 11
    FOR     shift, and go to state 12
    IF      shift, and go to state 13
    RETURN  shift, and go to state 14
    WHILE   shift, and go to state 15
    ';'     shift, and go to state 16
    '('     shift, and go to state 17
    '{'     shift, and go to state 18
    '}'     shift, and go to state 59
    '!'     shift, and go to state 19
    '$'     shift, and go to state 20

    stmt  go to state 21
    expr  go to state 22


state 33

   15 expr: expr . OR expr
   16     | expr . AN expr
   17     | expr . '^' expr
   18     | expr . EQ expr
   19     | expr . NE expr
   20     | expr . '<' expr
   21     | expr . '>' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . '+' expr
   25     | expr . PP ';'
   26     | expr . NN ';'
   27     | expr . '-' expr
   28     | expr . '*' expr
   29     | expr . '/' expr
   30     | expr . '%' expr
   31     | '!' expr .

    OR   shift, and go to state 35
    AN   shift, and go to state 36
    EQ   shift, and go to state 37
    NE   shift, and go to state 38
    LE   shift, and go to state 39
    GE   shift, and go to state 40
    PP   shift, and go to state 41
    NN   shift, and go to state 42
    '^'  shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    OR        [reduce using rule 31 (expr)]
    AN        [reduce using rule 31 (expr)]
    EQ        [reduce using rule 31 (expr)]
    NE        [reduce using rule 31 (expr)]
    LE        [reduce using rule 31 (expr)]
    GE        [reduce using rule 31 (expr)]
    PP        [reduce using rule 31 (expr)]
    NN        [reduce using rule 31 (expr)]
    '^'       [reduce using rule 31 (expr)]
    '<'       [reduce using rule 31 (expr)]
    '>'       [reduce using rule 31 (expr)]
    '+'       [reduce using rule 31 (expr)]
    '-'       [reduce using rule 31 (expr)]
    '*'       [reduce using rule 31 (expr)]
    '/'       [reduce using rule 31 (expr)]
    '%'       [reduce using rule 31 (expr)]
    $default  reduce using rule 31 (expr)


state 34

   33 expr: '$' INT8 .

    $default  reduce using rule 33 (expr)


state 35

   15 expr: expr OR . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 60


state 36

   16 expr: expr AN . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 61


state 37

   18 expr: expr EQ . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 62


state 38

   19 expr: expr NE . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 63


state 39

   22 expr: expr LE . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 64


state 40

   23 expr: expr GE . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 65


state 41

   25 expr: expr PP . ';'

    ';'  shift, and go to state 66


state 42

   26 expr: expr NN . ';'

    ';'  shift, and go to state 67


state 43

    4 stmt: expr ';' .

    $default  reduce using rule 4 (stmt)


state 44

   17 expr: expr '^' . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 68


state 45

   20 expr: expr '<' . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 69


state 46

   21 expr: expr '>' . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 70


state 47

   24 expr: expr '+' . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 71


state 48

   27 expr: expr '-' . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 72


state 49

   28 expr: expr '*' . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 73


state 50

   29 expr: expr '/' . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 74


state 51

   30 expr: expr '%' . expr

    ID     shift, and go to state 4
    INT8   shift, and go to state 5
    INT16  shift, and go to state 6
    INT32  shift, and go to state 7
    FLT    shift, and go to state 8
    STR    shift, and go to state 9
    '('    shift, and go to state 17
    '!'    shift, and go to state 19
    '$'    shift, and go to state 20

    expr  go to state 75


state 52

   14 expr: ID '=' expr .
   15     | expr . OR expr
   16     | expr . AN expr
   17     | expr . '^' expr
   18     | expr . EQ expr
   19     | expr . NE expr
   20     | expr . '<' expr
   21     | expr . '>' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . '+' expr
   25     | expr . PP ';'
   26     | expr . NN ';'
   27     | expr . '-' expr
   28     | expr . '*' expr
   29     | expr . '/' expr
   30     | expr . '%' expr

    OR   shift, and go to state 35
    AN   shift, and go to state 36
    EQ   shift, and go to state 37
    NE   shift, and go to state 38
    LE   shift, and go to state 39
    GE   shift, and go to state 40
    PP   shift, and go to state 41
    NN   shift, and go to state 42
    '^'  shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51

    OR        [reduce using rule 14 (expr)]
    AN        [reduce using rule 14 (expr)]
    EQ        [reduce using rule 14 (expr)]
    NE        [reduce using rule 14 (expr)]
    LE        [reduce using rule 14 (expr)]
    GE        [reduce using rule 14 (expr)]
    PP        [reduce using rule 14 (expr)]
    NN        [reduce using rule 14 (expr)]
    '^'       [reduce using rule 14 (expr)]
    '<'       [reduce using rule 14 (expr)]
    '>'       [reduce using rule 14 (expr)]
    '+'       [reduce using rule 14 (expr)]
    '-'       [reduce using rule 14 (expr)]
    '*'       [reduce using rule 14 (expr)]
    '/'       [reduce using rule 14 (expr)]
    '%'       [reduce using rule 14 (expr)]
    $default  reduce using rule 14 (expr)


state 53

    8 stmt: DO L stmt . WHILE '(' expr ')' M N ';'

    WHILE  shift, and go to state 76


state 54

    9 stmt: FOR '(' expr . ';' expr M ';' expr ')' stmt
   15 expr: expr . OR expr
   16     | expr . AN expr
   17     | expr . '^' expr
   18     | expr . EQ expr
   19     | expr . NE expr
   20     | expr . '<' expr
   21     | expr . '>' expr
   22     | expr . LE expr
   23     | expr . GE expr
   24     | expr . '+' expr
   25     | expr . PP ';'
   26     | expr . NN ';'
   27     | expr . '-' expr
   28     | expr . '*' expr
   29     | expr . '/' expr
   30     | expr . '%' expr

    OR   shift, and go to state 35
    AN   shift, and go to state 36
    EQ   shift, and go to state 37
    NE   shift, and go to state 38
    LE   shift, and go to state 39
    GE   shift, and go to state 40
    PP   shift, and go to state 41
    NN   shift, and go to state 42
    ';'  shift, and go to state 77
    '^'  shift, and go to state 44
    '<'  shift, and go to state 45
    '>'  shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '%'  shift, and go to state 51


state 55
